--- a/drive-article.html
+++ b/drive-article.html
@@ -23,7 +23,7 @@
 <nav id="navbar" class="navbar navbar-default navbar-inverse" role="navigation">
 	<div id="nav-container" class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="home.html">
+			<a class="navbar-brand" href="index.html">
 			<img src="imgs/logo.gif" alt="Brand" id="nav-logo">
 			<span class="title" id="nav-title">The Tech Wizard &nbsp; <i style="color:#cf9321" class="hidden-xs fa fa-angle-double-right"></i></span>
 			</a>
@@ -36,10 +36,10 @@
 			</div>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="nav navbar-nav">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="devices.html">Smart Devices</a></li>
                 <li ><a href="everyday.html" class="two-lines">Everyday <!-- <br>  -->Tech</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
 		
@@ -48,7 +48,7 @@
 <div id="banner-container" class="container-fluid">
 	<div class="row" id="banner-row">
 		<ol class="breadcrumb" id="breadcrumbs">
-		  <li><a class="link" href="home.html">Home</a></li>
+		  <li><a class="link" href="index.html">Home</a></li>
 		  <li><a class="link" href="everyday.html">Everyday Tech</a></li>
 		  <li class="active">Relax and let the Car Drive Itself</li>
 		</ol>
@@ -196,7 +196,7 @@
 			<div class="col-sm-8" id="footer-body">
 			
 				<div id="footer-nav">
-					<a href="home.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="index.html">About</a> 
+					<a href="index.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="about.html">About</a> 
 				</div>
 				<p id="footer-note">We hope the view behind the curtain was enlightening. Follow the yellow brick road back anytime...</p>
 				<span class="footer-purple"><a href="mailto:thetechwizard@gmail.com">thetechwizard@gmail.com</a> </span>
