--- a/everyday.html
+++ b/everyday.html
@@ -20,7 +20,7 @@
 <nav id="navbar" class="navbar navbar-default" role="navigation">
 	<div id="nav-container" class="container-fluid">
 		<div class="navbar-header">
-			<a class="navbar-brand" href="home.html">
+			<a class="navbar-brand" href="index.html">
 			<img src="imgs/logo.gif" alt="Brand" id="nav-logo">
 			<span class="title" id="nav-title">The Tech Wizard &nbsp; <i style="color:#6c4482" class="hidden-xs fa fa-angle-double-right"></i></span>
 			</a>
@@ -33,10 +33,10 @@
 			</div>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="nav navbar-nav">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="index.html">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="devices.html">Smart Devices</a></li>
                 <li class="active"><a href="#" class="two-lines">Everyday <!-- <br>  -->Tech</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
 		
@@ -87,7 +87,7 @@
 			<div class="col-sm-8" id="footer-body">
 			
 				<div id="footer-nav">
-					<a href="home.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="index.html">About</a> 
+					<a href="index.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="about.html">About</a> 
 				</div>
 				<p id="footer-note">We hope the view behind the curtain was enlightening. Follow the yellow brick road back anytime...</p>
 				<span class="footer-purple"><a href="mailto:thetechwizard@gmail.com">thetechwizard@gmail.com</a> </span>
