--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
+<!-- home.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>The Wizard Cover</title>
+	<title>Home</title>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif|Playfair+Display+SC:400,700,900' rel='stylesheet' type='text/css'>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" media="all">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="all">
 	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/home.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
 <body>
-
+<!-- Navigation Bar -->
+<div id="logo-top"><img id="top-logo"src="imgs/logo-back.gif" alt="Brand"></div>
 <nav id="navbar" class="navbar navbar-default navbar-inverse" role="navigation">
 	<div id="nav-container" class="container-fluid">
 		<div class="navbar-header">
@@ -30,76 +32,117 @@
 			</div>
 			<div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="nav navbar-nav">
-                <li><a href="home.html">Home <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
                 <li><a href="devices.html">Smart Devices</a></li>
                 <li><a href="everyday.html" class="two-lines">Everyday <!-- <br>  -->Tech</a></li>
-                <li class="active"><a href="index.html">About</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </div>
 		
 	</div>
 </nav>
 
-
-	<div id="banner" class="container-fluid">
-		<div class="row" id="tag">
-			<div id="tag-box"class="col-sm-12"><h1>Pay No Attention To That Man Behind The Curtain...</h1></div>
-		</div>
-		<div class="clearfix"></div>
-		<div class="row" id="top-row">
-			<a href="home.html"><div id="left" class="col-sm-4">
-					<!-- <h1>Pay No Attention To That Man Behind The Curtain...</h1> -->
-				</div></a>
-			<div id="right" class="col-sm-8">
-				<div class="js-video [vimeo, widescreen]">
-					<iframe src="https://www.youtube.com/embed/ubIpoPjBUds" frameborder="0" allowfullscreen></iframe>
+<div id="jumbo-car" class="jumbotron">
+	<div id="car-container" class="container">
+		<div id="my-car" class="carousel slide" data-ride="carousel" data-interval="4000">
+			<ol class="carousel-indicators">
+				<li data-target="#my-car" data-slide-to="0" class="active"></li>
+				<li data-target="#my-car" data-slide-to="1"></li>
+				<li data-target="#my-car" data-slide-to="2"></li>
+				<li data-target="#my-car" data-slide-to="3"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="item active">
+				<a href="wifi-article.html"><img src="imgs/comp-reflection-ban.jpg" alt=""></a>
+					<!-- <h2>Slide 1</h2> -->
+					<div class="carousel-caption">
+						<a href="wifi-article.html"><h3>How Does a Wi-Fi Signal Work? </h3></a>
+						<p>The magic that allows us to be in constant contact with the world is not as mystical as it may seem.</p>
+					</div>
+				</div>
+				<div class="item">
+				<a href="drive-article.html"><img src="imgs/suncars-ban.jpg" alt=""></a>
+					<!-- <h2>Slide 2</h2> -->
+					<div class="carousel-caption">
+						<a href="drive-article.html"><h3>Relax and let the Car Drive Itself</h3></a>
+						<p>No this is not a sci-fi article about some distant future, today's cars are starting to drive themselves.</p>
+					</div>
+				</div>
+				<div class="item">
+				<a href="touch-article.html"><img src="imgs/touch-ban.jpg" alt=""></a>
+					<!-- <h2>Slide 3</h2> -->
+					<div class="carousel-caption">
+						<a href="touch-article.html"><h3>Getting a Feeling for the Science of Touch Screens</h3></a>
+						<p>We swipe, tap, and scroll on a regular basis, but how do our devices actually feel us?</p>
+					</div>
+				</div>
+				<div class="item">
+				<a href="swipe-article.html"><img src="imgs/shoppers-ban.jpg" alt=""></a>
+					<!-- <h2>Slide 3</h2> -->
+					<div class="carousel-caption">
+						<a href="swipe-article.html"><h3>Spending with a Simple Swipe</h3></a>
+						<p>We use our credit cards almost everyday, it's the easiest way to spend, but what really happens when you swipe?</p>
+					</div>
 				</div>
 			</div>
+		<!-- Controls -->
+		<a href="#my-car" class="carousel-control left" data-slide="prev" role="button">
+			<span class="glyphicon glyphicon-chevron-left"></span>
+		</a>
+		<a href="#my-car" class="carousel-control right" data-slide="next" role="button">
+			<span class="glyphicon glyphicon-chevron-right"></span>
+		</a>
 		</div>
-		<div class="clearfix"></div>
-		<div class="row" id="bottom-row">
-
-			<div class="col-sm-4 squares" id="left-sq">
-			<h1>How Does That Work?</h1>
-			<p class="mid-text">It's a simple question, but it's one we never seem to have time for. In fact most of us have no idea how this screen works or how you're reading this page that was written thousands of miles away. We are almost totally dependent on technology, from our smart phones to the simple subway turnstile. And yet we have no idea why any of it works.</p>
-			<p class="bottom-phrase"><b>Arent' You Curious??</b></p>
-			</div>
-			<div class="col-sm-4 squares" id="middle-sq">
-				<h1>Behind The Curtain...</h1>
-				<p class="mid-text">The Tech Wizard is commited to giving a illuminating yet simple look inside the technology we use everyday. There's something for everyone, with articles about a variety of different electronics. Don't worry about getting confused, our help center has explanations of any technical details and a summary in case you get lost along the way. And if you want more details every article has links to more information.</p>
-				<p class="bottom-phrase"><b>Start Understanding Your Tech</b></p>
-			</div>
-			<div class="col-sm-4 squares" id="right-sq">
-				<h1 >The Wizard Takes Requests</h1>
-				<p class="mid-text">Is there something you're curious about? Have a comment or suggestion? Feel free to follow the yellow brick road, or perhaps just send us an email at <a href="mailto:thetechwizard@gmail.com">thetechwizard@gmail.com</a>.
-				The Wizard welcomes any and all feedback. We'll click our heels and get right on it. If you know any other curious souls be sure to:</p>
-				 <p class="bottom-phrase"><b>Share the knowledge.</b></p>
-			</div>
-		</div>
-		<div class="clearfix"></div>
-		<div class="row" id="footer">
-		<div class="col-sm-2"><img id="footer-logo" src="imgs/logo.gif" alt=""></div>
-			<div class="col-sm-8" id="footer-body">
-				<a href="home.html"><h1>The Wizard Will See You Now...</h1></a>
-				<div id="footer-nav">
-
-					<a href="home.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="index.html">About</a> 
-				</div>
-			</div>
-			
-		</div>
-		<!-- <img class="banner-img" src="imgs/wizard-mural.jpg" alt=""> -->
 	</div>
-	<!-- <a href="home.html">Home</a> -->
+</div>
 
-<!-- 	<div id="footer-container" class="container-fluid visible-sm visible-md visible-lg">
+<div id="main-container" class="container">
+	<div class="row" id="sections-head">
+		<div id="section-links">
+		<a href="devices.html" id="devices-link" class="sec-link">Smart Devices</a> &nbsp; | &nbsp; 
+		<a href="everyday.html" id="everyday-link" class="sec-link">Everyday Tech</a>
+		</div>
+		<hr class="h-divider">
+	</div>
+	<div class="row article-row" id="article-row1">
+		<div id="touch" class="article-col col-sm-6 col-md-4">
+			<a class="category-cap" href="devices.html">Smart Devices</a>
+			<a href="touch-article.html"><img class="article-img" src="imgs/touch-tablet-sq.jpg" alt="Man with tablet"></a>
+			<div class="article-text">
+				<h3 class="article-title"><a href="touch-article.html">Feeling the Science of Touch Screens:</a></h3>
+				<p class="article-tag">We swipe, tap, and scroll on a regular basis, but how do our devices actually feel us?</p>
+			</div>
+		</div>
+		<!-- <div class="vertical-rule visible-sm-block visible-md-block visible-lg-block">h</div> -->
+		<div id="drive" class="article-col col-sm-6 col-md-4">
+			<a class="category-cap" href="everyday.html">Everyday Tech</a>
+			<a href="drive-article.html"><img class="article-img" src="imgs/bus-blur-sq.jpg" alt="Blurry cars driving down city street"></a>
+			<div class="article-text">
+				<h3 class="article-title"><a href="drive-article.html">Relax and let the Car Drive Itself:</a></h3>
+				<p class="article-tag">No it's not science fiction, today's cars are starting to drive themselves.</p>
+			</div>
+		</div>
+		<div class="clearfix visible-sm-block"></div>
+		<div class="article-col col-sm-6 col-md-4">
+			<a class="category-cap" href="devices.html">Smart Devices</a>
+			<a href="wifi-article.html"><img class="article-img" src="imgs/laptop-desk-sq.jpg" alt="Laptop, phone, mouse, and pens sitting on desk"></a>
+			<div class="article-text">
+				<h3 class="article-title"><a href="wifi-article.html">How Does a Wi-Fi Signal Work?</a></h3>
+				<p class="article-tag">The magic that allows us to be in constant contact with the world is not as mystical as it may seem.</p>
+			</div>
+		</div>
+		<div class="clearfix visible-md-block"></div>
+	</div>
+</div>
+
+<div id="footer-container" class="container-fluid visible-sm visible-md visible-lg">
 	<div class="row" id="footer-row">
 		<footer class="footer">
 			<div class="col-sm-2"><img id="footer-logo" src="imgs/logo.gif" alt=""></div>
 			<div class="col-sm-8" id="footer-body">
 			
 				<div id="footer-nav">
-					<a href="home.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="index.html">About</a> 
+					<a href="index.html">Home</a> &nbsp; | &nbsp;  <a href="devices.html">Smart Devices</a> &nbsp; | &nbsp; <a href="everyday.html">Everyday Tech</a> &nbsp; | &nbsp; <a href="about.html">About</a> 
 				</div>
 				<p id="footer-note">We hope the view behind the curtain was enlightening. Follow the yellow brick road back anytime...</p>
 				<span class="footer-purple"><a href="mailto:thetechwizard@gmail.com">thetechwizard@gmail.com</a> </span>
@@ -107,6 +150,6 @@
 			
 	</footer>
 	</div>
-</div> -->
+</div>
 </body>
 </html>
