--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" media="all">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="all">
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<!-- <link rel="stylesheet" href="css/home.css"> -->
+	<link rel="stylesheet" href="css/home.css">
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
 <body>
