--- a/touch-article.html
+++ b/touch-article.html
@@ -6,13 +6,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Feeling the Science of Touch Screens</title>
-	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif|Playfair+Display+SC:400,700,900' rel='stylesheet' type='text/css'>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<link href='https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif|Playfair+Display+SC:400,700,900' rel='stylesheet' type='text/css'>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<link rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css" media="all">
 	<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" media="all">
-	<script src="bootstrap/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/article.css">
+	<script src="bootstrap/js/bootstrap.min.js"></script>
 	<script src="js/article.js"></script>
 	<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 </head>
