--- a/swipe-article.html
+++ b/swipe-article.html
@@ -46,16 +46,17 @@
 		
 	</div>
 </nav>
-<div id="banner-container" class="container-fluid">
+<!-- <div id="banner-container" class="container-fluid">
 	<div class="row" id="banner-row">
 		<ol class="breadcrumb" id="breadcrumbs">
 		  <li><a class="link" href="index.html">Home</a></li>
 		  <li><a class="link" href="everyday.html">Everyday Tech</a></li>
 		  <li class="active">Spending With a Simple Swipe</li>
 		</ol>
-		<!-- <img src="imgs/shoppers-ban2.jpg" alt="Blurry Shoppers in a mall" class="banner-img"> -->
+		< <img src="imgs/shoppers-ban2.jpg" alt="Blurry Shoppers in a mall" class="banner-img">
 	</div>
-</div>
+</div> -->
+ 
 <div id="top-container" class="container">
 <!-- 	<div id="section-links">
 		<a href="devices.html" id="devices-link" class="sec-link">Smart Devices</a> &nbsp; | &nbsp; 
