--- a/drive-article.html
+++ b/drive-article.html
@@ -45,16 +45,15 @@
 		
 	</div>
 </nav>
-<div id="banner-container" class="container-fluid">
+<!-- <div id="banner-container" class="container-fluid">
 	<div class="row" id="banner-row">
 		<ol class="breadcrumb" id="breadcrumbs">
 		  <li><a class="link" href="index.html">Home</a></li>
 		  <li><a class="link" href="everyday.html">Everyday Tech</a></li>
 		  <li class="active">Relax and let the Car Drive Itself</li>
 		</ol>
-		<!-- <img src="imgs/shoppers-ban2.jpg" alt="Blurry Shoppers in a mall" class="banner-img"> -->
 	</div>
-</div>
+</div> -->
 <div id="top-container" class="container">
 <!-- 	<div id="section-links">
 		<a href="devices.html" id="devices-link" class="sec-link">Smart Devices</a> &nbsp; | &nbsp; 
