--- a/wifi-article.html
+++ b/wifi-article.html
@@ -44,16 +44,16 @@
 		
 	</div>
 </nav>
-<div id="banner-container" class="container-fluid">
+<!-- <div id="banner-container" class="container-fluid">
 	<div class="row" id="banner-row">
 		<ol class="breadcrumb" id="breadcrumbs">
 		  <li><a class="link" href="index.html">Home</a></li>
 		  <li><a class="link" href="devices.html">Smart Devices</a></li>
 		  <li class="active">How Does a Wi-Fi Signal Work?</li>
 		</ol>
-		<!-- <img src="imgs/shoppers-ban2.jpg" alt="Blurry Shoppers in a mall" class="banner-img"> -->
 	</div>
-</div>
+</div> -->
+
 <div id="top-container" class="container">
 <!-- 	<div id="section-links">
 		<a href="devices.html" id="devices-link" class="sec-link">Smart Devices</a> &nbsp; | &nbsp; 
